idea/testData/multiModuleHighlighting/multiplatform/basic/jvm/jvm.kt
<error descr="[IMPLEMENTATION_WITHOUT_HEADER] Modifier 'impl' is only applicable to members that are initially declared in platform-independent code">impl</error> class Your {

}

header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] Header declaration 'His' has no implementation in module jvm for JVM">His</error> {

}

header class Their {

}

impl class Their {

}